tests/test_programs/errors/dangling_scope.cm
// スコープ外への参照漏れ
int main() {
    int* p;
    {
        int x = 42;
        p = &x;
    }
    return 0;
}
